fix: gap

--- a/src/components/TicketsSection/TicketsSection.scss
+++ b/src/components/TicketsSection/TicketsSection.scss
@@ -22,7 +22,7 @@
     z-index: 1;
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 1rem;
     align-items: center;
     width: min(1200px, 90%);
     color: var(--text-light);
